--- a/comps/app/DescriptionList/description-list.module.scss
+++ b/comps/app/DescriptionList/description-list.module.scss
@@ -13,8 +13,9 @@
 		background-color: #fff;
 
 		.descriptionHeadText {
-			font-size: 1.2rem;
+			font-size: 1.6rem;
 			padding: 1.6rem 0;
+			font-weight: 500;
 			color: black;
 			text-transform: uppercase;
 		}
