--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -21,6 +21,16 @@ a {
   color: inherit;
 }
 
+button, input[type="submit"], input[type="reset"] {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
 .overflowHidden {
   overflow: hidden;
 }
